Fix a find_bar audible alert regression due to r404307.

In refactor CL r404307, I mistakenly changed
last_search.find(current_search) != 0 to
StartsWith(last_search, current_search) instead of
!StartsWith(last_search, current_search)

This CL fixes the issue.

BUG=674713
Test=Open any webpage, Ctrl+F to start search, start typing some word,
audible alert should be heard as soon as the typed characters aren't
found on the page.

Review-Url: https://codereview.chromium.org/2590673002
Cr-Commit-Position: refs/heads/master@{#439644}

Former-commit-id: 6cce238ff09415dfdb4f6786cfa314a48ae6e8ce